--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,9 +21,11 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: workflow
-          environment_name: frontend
-          existing_bucket_name: docker-react-practice
-          region: uk
+          application_name: Docker-react-practice
+          environment_name: Dockerreactpractice-env
+          existing_bucket_name: elasticbeanstalk-eu-west-2-863749405046
+          region: eu-west-2
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
+          on:
+            branch: master
