--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: Docker-react-practice
-          environment_name: Dockerreactpractice-env
+          environment_name: Dockerreactpractice-env-1
           existing_bucket_name: elasticbeanstalk-eu-west-2-863749405046
           region: eu-west-2
           version_label: ${{ github.sha }}
